solve firefox issue and spacing issue

--- a/agile-frontend/WebContent/flatfull/css/core/1-agilecrm.css
+++ b/agile-frontend/WebContent/flatfull/css/core/1-agilecrm.css
@@ -3488,3 +3488,7 @@ text-align:left;
 	margin-top:90px;
 	width:33%;
 }
+
+.allow_access_editicon{
+margin-left:27px;
+}
